# EmberEngine

./: .gitignore  CMakeLists.txt  README.md
Ember/: CMakeLists.txt
Ember/src/ember/: ember.cpp  ember.h
Ember/src/ember/core/: id.h  types.h
Sandbox/: CMakeLists.txt  main.cpp
